# PARDIBAAL

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-linux-clang.yml  build-linux.yml  build-macos-gcc.yml  build-macos.yml
include/: errors.h  errors.h.cpp
src/: CMakeLists.txt
src/dbm/: BoundsTable.cpp  DBM.cpp  DBM.h  bound_t.cpp  bound_t.h  bounds_table_t.cpp  bounds_table_t.h
src/dbm2/: DBM.cpp  DBM.h  bound_t.cpp  bound_t.h  bounds_table_t.cpp  bounds_table_t.h
src/pardibaal/: DBM.cpp  DBM.h  Federation.cpp  Federation.h  bound_t.cpp  bound_t.h  bound_t_compressed.h  bounds_table_t.cpp  bounds_table_t.h  clock_constraint_t.cpp  clock_constraint_t.h  difference_bound_t.cpp  difference_bound_t.h
test/: CMakeLists.txt  DBM_test.cpp  Federation_test.cpp  bound_test.cpp  bounds_table_test.cpp  clock_constraint_test.cpp  construction_test.cpp  difference_bound_test.cpp  trace_1.xml  trace_2.xml  vector_pointer_test.cpp
